--- a/frontend/src/styles/Post.css
+++ b/frontend/src/styles/Post.css
@@ -1,44 +1,44 @@
 .gm-post-container {
     display: flex;
-    justify-content: space-around;
-    width: 90%;
+    justify-content: space-between;
     margin: auto;
+    width: 90%;
 }
 
 .gm-post-card {
-    border-radius: 30px;
-    height: 500px;
-    width: 60%;
     margin-top : 100px;
+    height: 500px;
+    width: 75%;
+    border-radius: 30px;
     background-color: #FFD7D7;
 }
 
 .gm-post-title {
-    border-radius: 30px 30px 0 0;
-    text-align: right;
     margin: 0;
     padding: 20px 20px;
+    border-radius: 30px 30px 0 0;
     background-color: #4E5166;
     color: #FFF;
+    text-align: right;
     font-size: 30px;
 }
 
 .gm-post-date {
-    padding-left: 35px;
-    margin: 5px 0 0 0;
+    margin: 5px 0;
+    padding-left: 40px;
     color: #4E5166;
     font-size: 20px;
     font-weight: bold;
 }
 
 .gm-post-text {
-    border-radius: 30px;
-    border : none;
+    display: block;
+    margin: auto;
+    padding: 20px;
     height: 60%;
     width: 90%;
-    margin-left: 3%;
-    margin-top: 1%;
-    padding: 20px;
+    border-radius: 30px;
+    border : none;
     background-color: #FFF;
     resize: none;
 }
@@ -46,7 +46,6 @@
 .gm-post-footer {
     display: flex;
     justify-content: space-between;
-    padding-left: 35px;
     color: #4E5166;
     font-size: 20px;
     font-weight: bold;
@@ -54,26 +53,46 @@
 
 .gm-post-thumbs {
     margin: 0;
-    padding-right: 35px;
+    padding: 5px 40px 0;
 }
 
 .gm-post-file {
-    padding-top: 5px;
+    padding: 10px 0 0 40px;
 }
 
 .gm-submit-container {
-    text-align: center;
     align-self: center;
+    width: 20%;
+}
+
+.gm-post-back {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 90%;
+    margin-top: 100px;
+    border: none;
+    border-radius: 30px;
+    background-color: #FFD7D7;
+    color: #FFF;
+    cursor: pointer;
+}
+
+.gm-post-back-title {
+    text-align: center;
+    color: #4E5166;
+    font-size: 25px;
 }
 
 .gm-post_submit {
     height: 100px;
-    width: 200px;
+    width: 90%;
+    margin-top: 100px;
+    border: none;
+    border-radius: 30px;
     background-color: #4E5166;
     font-size: 30px;
     font-weight: bold;
     color: #FFF;
-    border: none;
-    border-radius: 30px;
     cursor: pointer;
 }
