login 50% done and some folder organization

--- a/frontend/src/styles/Connect.css
+++ b/frontend/src/styles/Connect.css
@@ -5,11 +5,15 @@
     background-color: #4E5166;
     border: solid #FFD7D7 1px;
     border-radius: 30px;
-    cursor: pointer;
 }
 
 .gm-connect-title {
     text-align: center;
     color: #FFD7D7;
     font-size: 30px;
+}
+
+.gm-connect:hover {
+    color: #fff;
+    background-color: #6c6f8d;
 }
