--- a/frontend/src/styles/WallCard.css
+++ b/frontend/src/styles/WallCard.css
@@ -12,8 +12,13 @@
     height: 300px;    
     border-radius: 30px;
     background-color: #FFD7D7;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
+.gm-wallcard:hover {
+    box-shadow: 5px 5px 20px #4E5166;
+    transition: box-shadow 0.5s ease-in-out;
+}
 
 .gm-wallcard-title {
     text-align: right;
