--- a/frontend/src/components/Buttons/LogoutCard.css
+++ b/frontend/src/components/Buttons/LogoutCard.css
@@ -4,6 +4,7 @@
     background-color: #FFD7D7;
     border: solid #FFD7D7 1px;
     border-radius: 30px;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .gm-pages-logout-title {
@@ -14,4 +15,5 @@
 
 .gm-pages-logout:hover {
     background-color: #d1a3a3;
+    transition: background-color 0.3s ease-in-out;
 }
