--- a/frontend/src/components/Buttons/SignUpCard.css
+++ b/frontend/src/components/Buttons/SignUpCard.css
@@ -6,10 +6,16 @@
     background-color: #FFD7D7;
     border: solid #FFD7D7 1px;
     border-radius: 30px;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .gm-home-signup-title {
     text-align: center;
     color: #4E5166;
     font-size: 30px;
+}
+
+.gm-home-signup:hover {
+    background-color: #d1a3a3;
+    transition: background-color 0.3s ease-in-out;
 }
