--- a/frontend/src/components/Posts/PostCard.css
+++ b/frontend/src/components/Posts/PostCard.css
@@ -23,12 +23,27 @@
 
 .gm-postcard-img {
     width: 200px;
+    height: 200px;
     border: #4E5166 solid 5px;
     border-radius: 30px 0 30px 0;
 }
 
 .gm-postcard-like {
+    width: 50%;
+    margin: 25px auto;
     text-align: center;
+    padding: 5px;
+    background-color: #4E5166;
+    border-radius: 15px;
+    color: #FFF;
+    font-weight: bold;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.gm-postcard-like:hover {
+    transition: background-color 0.3s ease-in-out;
+    background-color: #afb1c2;
+    cursor: pointer;
 }
 
 .gm-postcard-content {
