--- a/frontend/src/components/Posts/ModifyPost.css
+++ b/frontend/src/components/Posts/ModifyPost.css
@@ -52,8 +52,20 @@
 }
 
 .gm-post-thumbs {
-    margin: 0;
-    padding: 5px 40px 0;
+    width: 10%;
+    margin: 10px 15px 0 0;
+    text-align: center;
+    background-color: #4E5166;
+    border-radius: 15px;
+    color: #FFF;
+    font-weight: bold;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.gm-post-thumbs:hover {
+    transition: background-color 0.3s ease-in-out;
+    background-color: #afb1c2;
+    cursor: pointer;
 }
 
 .gm-post-file {
