--- a/frontend/src/components/Posts/PostCard.css
+++ b/frontend/src/components/Posts/PostCard.css
@@ -25,7 +25,9 @@
     width: 200px;
     height: 200px;
     border: #4E5166 solid 5px;
+    background-color: #4E5166;
     border-radius: 30px 0 30px 0;
+    object-fit: contain;
 }
 
 .gm-postcard-like {
@@ -51,15 +53,31 @@
 }
 
 .gm-postcard-title{
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
     box-sizing: border-box;
     margin: 0;
-    width: 100%;
+    height: 22%;
     padding: 15px 25px;
     border-radius: 0 30px 0 0;
     background-color: #4E5166;
     color: #FFF;
     font-size: 25px;
+}
+
+.gm-postcard-title h3 {
+    text-align: center;
+    margin: 0;
+    width: 35%;
+    background-color: #FFD7D7;
+    border-radius: 15px;
+    color: #4E5166;
+    box-sizing:border-box;
+}
+
+.gm-postcard-title h3:hover {
+    background-color: #d1a3a3;
+    cursor: pointer;
 }
 
 .gm-postcard-text {
