--- a/frontend/src/components/Forms/FormBtn.css
+++ b/frontend/src/components/Forms/FormBtn.css
@@ -20,3 +20,9 @@
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
 }
+
+@media screen and (max-width: 998px) {
+    .gm-form-btn {
+        padding: 30px 50px;
+    }
+}    
